# TeamTI

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  cargo-tree.txt  docker-compose.yml  test_macro.rs  test_track_macro.rs
.cargo/: config.toml
.githooks/: pre-commit
.sqlx/: query-0434dfdf28dffd0644316c6bb1060debc243446cf00abb2646d7add6f2db81ea.json  query-0508111aa69675a81f39fa08ef1215ac91d5fa0c9faab5cbe18e3fd9d2641a9e.json  query-05f45cd445b7e4d3532bdbf108b5281b2c35e42fe8db0ec683dd635a87fd8b0c.json  query-06d00b66900461ddb47d0d6411c0f46f6aecf286ca48d0303fb80d4845d14447.json  query-07475fc0eda699e8322dceac7db6f019e7a2edee60d609fc781caf2ae5ba4cd8.json  query-08a43b603db602c5d4b5019ab8495914fd77be92468c18999436cb5682ed9e81.json  query-0a91791e3af53be894af696c7ff3e341eb59d38a023d6fd713934cf63f57ead9.json  query-119cbf368455d369762118c0e2bec194ee97104b3c95832bb211a296902a7488.json  query-1246d9f674f1e6de69f61760d21563716bafcffe63ab7b691c79fa4b118f35fb.json  query-15fa9e05f22a072fa7f5cf2701a06c22ef39346d3f2e065a0f66486abe433772.json  query-168cdb86145ff7888c24e59597b2b4b44cfc457be8d62a0e6e7a4ed68f6ac040.json  query-1983dc58015c43c9edffd205909d465d0ce0d9d78777d0205a7aa66674d5ab42.json  query-1ba2a594bcdda0dfe9cd1295da237f9a6e153f6b115fba59df15e459e701a487.json  query-1bf265b953a988004b4001a55bf026fde4072502f62b5f9c5ef82a3eeb1a7d64.json  query-1eef5c19704fc40effa57c84d3f9982734ce9addaa5d318d9fcb36d9f2002f29.json  query-1f021f164b6c0e4498fd74f572ef0be330091cb7645d9cd747b88113cf4f6161.json  query-23fce090e91e01697b57f059bd0f9dcc91a009e610d03189de17791a77c0df9c.json  query-248bd5949a968cbbd9f711e319caeb20245960416fe51db6fe1f918d1ce35c24.json  query-25b4679fc20b88b0605b61ad6a81a2674789e7d79eec60f712f3882f721f35d3.json  query-273f0c9cb236ab65362c857fb5b0a49e1259636cb7e89f4efeae82076d34f899.json  query-2c0b422631a51f561396de1b423a370b2ad1c01d98e3a018dd917291132e36f5.json  query-2f83bd291a1e9c4e39374232e8325f7ca45bd2311da76131b6e0a29cc71e074a.json  query-3201991a952f40090660e503cbbf41d2c57d72bc42dbb90de51cd98c3431d580.json  query-32ab39b3b10bab3a33093a551106e85b336f1f5bbaa09f61feb90f2221cc36b1.json  query-3337956466296acde8a19a6e531f096d15aab366dadf859cdba1b6d062894144.json  query-339486c8bfd79f65e6b81e1075e9e3059e6a79cd0d966cf05fd6af305d9bd8f3.json  query-3395bfa7052e548bf500db8b9b978f145c80c64d4f3084972c076a32581dcd69.json  query-33998985c24aeb97fe028bf8d6b9d95db06677ebfa046e79f1e8dd5101d47f72.json  query-35a110fde7e1ac68c169662238e65184119b68ce1774e85374c0c7b4e1464def.json  query-35b517d05a064281d95f7c2ccf59a8600fa4cef22060e8c5cbe40cb030cead01.json  query-35e8c61b3680378e7d96dd1fabe72986a1aa186ccc1d7be1dd2fb4c227d2e8be.json  query-370fc385629ca3280e8dc0599c0b340928e632d78bc923b7d1285ba750db81c9.json  (+109 more)
apps/bot/: Cargo.toml  build.rs
apps/bot/src/: main.rs  telemetry.rs
apps/bot/tests/: enrichment_smoke.rs
crates/adapters-acoustid/: Cargo.toml
crates/adapters-acoustid/src/: lib.rs  response.rs
crates/adapters-analysis/: Cargo.toml
crates/adapters-analysis/src/: lib.rs
crates/adapters-cover-art/: Cargo.toml
crates/adapters-cover-art/src/: lib.rs
crates/adapters-discord/: Cargo.toml
crates/adapters-discord/src/: commands.rs  handler.rs  lib.rs  lifecycle_worker.rs  register.rs  response.rs
crates/adapters-discord/src/commands/: clear.rs  favourite.rs  history.rs  leave.rs  mod.rs  move_track.rs  nowplaying.rs  pagination.rs  pause.rs  play.rs  play_debug.patch  playlist.rs  queue.rs  radio.rs  remove.rs  rescan.rs  resume.rs  shuffle.rs  skip.rs
crates/adapters-discord/src/ui/: colors.rs  custom_id.rs  format.rs  mod.rs
crates/adapters-lastfm/: Cargo.toml
crates/adapters-lastfm/src/: lib.rs  response.rs
crates/adapters-lyrics/: Cargo.toml
crates/adapters-lyrics/src/: lib.rs
crates/adapters-media-store/: Cargo.toml
crates/adapters-media-store/src/: classifier.rs  fingerprint.rs  fs_store.rs  importer.rs  lib.rs  path_policy.rs  scanner.rs  tag_reader.rs  tag_writer.rs  tag_writer_port.rs  text.rs
crates/adapters-media-store/tests/: test_lofty.rs  test_symphonia.rs
crates/adapters-musicbrainz/: Cargo.toml
crates/adapters-musicbrainz/src/: lib.rs  response.rs
crates/adapters-persistence/: Cargo.toml
crates/adapters-persistence/src/: db.rs  lib.rs  migrations.rs  models.rs
crates/adapters-persistence/src/repositories/: album_repository.rs  artist_repository.rs  media_repository.rs  mod.rs  playlist_repository.rs  recommendation_repository.rs  settings_repository.rs  track_repository.rs  user_library_repository.rs  youtube_repository.rs
crates/adapters-search/: Cargo.toml
crates/adapters-search/src/: indexer.rs  lib.rs  schema.rs  searcher.rs  tests.rs  tokenizer.rs
crates/adapters-voice/: Cargo.toml
crates/adapters-voice/src/: event_handler.rs  lazy_input.rs  lib.rs  lifecycle.rs  mapper.rs  player.rs  songbird_gateway.rs  songbird_test.rs  state.rs  state_map.rs  track_event_handler.rs
crates/adapters-watcher/: Cargo.toml
crates/adapters-watcher/src/: event.rs  lib.rs  watcher.rs
crates/adapters-ytdlp/: Cargo.toml
crates/adapters-ytdlp/src/: lib.rs  metadata.rs  sanitize.rs
crates/application/: Cargo.toml
crates/application/src/: acoustid_worker.rs  analysis_worker.rs  cover_art_worker.rs  dto.rs  enrichment_orchestrator.rs  error.rs  events.rs  lastfm_worker.rs  lib.rs  lyrics_worker.rs  musicbrainz_worker.rs  tag_writer_worker.rs  youtube_search_worker.rs  youtube_worker.rs
crates/application/src/ports/: audio_analysis.rs  enrichment.rs  file_ops.rs  lastfm.rs  library.rs  media_repository.rs  media_store.rs  mod.rs  playback_gateway.rs  playlist.rs  recommendation.rs  repository.rs  search.rs  settings_repository.rs  user_library.rs  youtube.rs  ytdlp.rs
crates/application/src/services/: enqueue_track.rs  join_voice.rs  leave_voice.rs  mod.rs  register_media.rs
crates/domain/: Cargo.toml
crates/domain/src/: album.rs  analysis.rs  artist.rs  autocomplete.rs  enrichment.rs  error.rs  guild.rs  lib.rs  media.rs  playback.rs  playlist.rs  search.rs  track.rs  user_library.rs  youtube.rs
(+74 files in other folders)
