[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["TeamTI"]

[workspace]
members = ["apps/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
# Async Runtime
tokio = "1.51"

# Discord & Voice
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next" }
symphonia = { version = "0.5" }
rustls = { version = "0.23", default-features = false }

# Persistence
sqlx = { version = "0.8", default-features = false }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
    "ansi",
] }
thiserror = "2"
serde = "1.0"
serde_json = "1"
uuid = "1.11"
chrono = "0.4"
dotenvy = "0.15"
async-trait = "0.1"
bytes = "1"
nonzero_ext = "0.3"
governor = { version = "0.10", default-features = false, features = ["std"] }
reqwest = { version = "0.13", default-features = false }
lofty = "0.23"
notify = "8"
notify-debouncer-full = { version = "0.7", default-features = false }

unicode-normalization = "0.1"
walkdir = { version = "2", default-features = false }
tokio-util = "0.7"
chromaprint-next = "0.1.0"
dashmap = { version = "6", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
