[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["TeamTI"]

[workspace]
members = ["apps/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.51", default-features = false }
governor = { version = "0.10", default-features = false }
reqwest = { version = "0.13", default-features = false }
tokio-util = { version = "0.7", default-features = false }

# Audio
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false }
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next", default-features = false }
symphonia = { version = "0.5", default-features = false }
chromaprint-next = { version = "0.1.0", default-features = false }
rustls = { version = "0.23", default-features = false }

# Persistence
sqlx = { version = "0.8", default-features = false }

tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1", default-features = false }
notify-debouncer-full = { version = "0.7", default-features = false }
dashmap = { version = "6", default-features = false }
walkdir = { version = "2", default-features = false }
thiserror = { version = "2", default-features = false }
uuid = { version = "1.11", default-features = false }
chrono = { version = "0.4", default-features = false }
dotenvy = { version = "0.15", default-features = false }
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1", default-features = false }
nonzero_ext = { version = "0.3", default-features = false }
lofty = { version = "0.23", default-features = false }
notify = { version = "8", default-features = false }
unicode-normalization = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
