[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["TeamTI"]

[workspace]
members = ["apps/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.51", default-features = false }
governor = { version = "0.10", default-features = false }
reqwest = { version = "0.13", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tantivy = { version = "0.26", default-features = false }

# Audio
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false }
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next", default-features = false }
symphonia = { version = "0.5", default-features = false }
chromaprint-next = { version = "0.1.0", default-features = false }
bliss-audio = { version = "0.11", default-features = false }
rustls = { version = "0.23", default-features = false }

# Persistence
sqlx = { version = "0.8", default-features = false }
pgvector = { version = "0.4", default-features = false }

tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1", default-features = false }
notify-debouncer-full = { version = "0.7", default-features = false }
dashmap = { version = "6", default-features = false }
walkdir = { version = "2", default-features = false }
thiserror = { version = "2", default-features = false }
uuid = { version = "1.11", default-features = false }
chrono = { version = "0.4", default-features = false }
dotenvy = { version = "0.15", default-features = false }
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1", default-features = false }
nonzero_ext = { version = "0.3", default-features = false }
lofty = { version = "0.23", default-features = false }
notify = { version = "8", default-features = false }
unicode-normalization = { version = "0.1", default-features = false }
fastrand = { version = "2.4", default-features = false }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
doc_markdown = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"
manual_let_else = "allow"
format_push_string = "allow"
items_after_statements = "allow"
match_same_arms = "allow"
struct_excessive_bools = "allow"
unused_async = "allow"
similar_names = "allow"
unseparated_literal_suffix = "allow"
