[package]
name = "bot"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
application = { path = "../../crates/application" }
adapters-discord = { path = "../../crates/adapters-discord" }
adapters-voice = { path = "../../crates/adapters-voice" }
adapters-persistence = { path = "../../crates/adapters-persistence" }
adapters-media-store = { path = "../../crates/adapters-media-store" }
adapters-acoustid = { path = "../../crates/adapters-acoustid" }
adapters-musicbrainz = { path = "../../crates/adapters-musicbrainz" }
adapters-cover-art = { path = "../../crates/adapters-cover-art" }
adapters-lyrics = { path = "../../crates/adapters-lyrics" }
adapters-search = { path = "../../crates/adapters-search" }
adapters-analysis = { path = "../../crates/adapters-analysis" }
adapters-lastfm = { path = "../../crates/adapters-lastfm" }
adapters-ytdlp = { path = "../../crates/adapters-ytdlp" }
shared-config = { path = "../../crates/shared-config" }
dashmap = { workspace = true, features = ["inline"] }

tokio = { workspace = true, features = ["full"] }
serenity = { workspace = true, features = [
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "voice",
] }
songbird = { workspace = true, features = [
    "driver",
    "rustls",
    "serenity",
    "builtin-queue",
    "tungstenite",
    "gateway",
] }
tracing = { workspace = true, features = ["default"] }
dotenvy.workspace = true
rustls = { workspace = true, features = ["ring", "std"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing-subscriber = { workspace = true, features = [
    "default",
    "env-filter",
    "json",
] }
