[package]
name = "adapters-acoustid"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
reqwest = { workspace = true, features = ["json", "rustls", "form", "http2", "brotli", "gzip", "hickory-dns", "zstd"] }
governor = { workspace = true, features = ["std", "quanta"] }
nonzero_ext.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
