[package]
name = "adapters-cover-art"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { path = "../application" }
lofty.workspace = true
reqwest = { workspace = true, features = ["rustls"] }
bytes = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
