[package]
name = "adapters-cover-art"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
application = { path = "../application" }
lofty = { workspace = true }
reqwest = { workspace = true, features = [
    "rustls",
    "http2",
    "brotli",
    "gzip",
    "hickory-dns",
    "zstd",
] }
bytes = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true, features = ["default"] }
thiserror = { workspace = true, features = ["default"] }
async-trait = { workspace = true }
