[package]
name = "adapters-discord"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
adapters-media-store = { path = "../adapters-media-store" }

serenity.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
