[package]
name = "adapters-discord"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
adapters-voice = { path = "../adapters-voice" }
adapters-persistence = { path = "../adapters-persistence" }
application = { path = "../application" }
shared-config = { path = "../shared-config" }

songbird = { workspace = true, features = ["serenity"] }
serenity = { workspace = true, features = [
    "voice",
    "gateway",
    "rustls_backend",
    "model",
] }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde", "fast-rng"] }
