[package]
name = "adapters-discord"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
adapters-voice = { path = "../adapters-voice" }
adapters-persistence = { path = "../adapters-persistence" }
application = { path = "../application" }
domain = { path = "../domain" }
shared-config = { path = "../shared-config" }

songbird = { workspace = true, features = ["serenity"] }
serenity = { workspace = true, features = [
    "voice",
    "gateway",
    "rustls_backend",
    "model",
] }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true, features = ["default"] }
uuid = { workspace = true, features = ["v4", "serde", "fast-rng"] }
chrono = { workspace = true, features = ["clock"] }
fastrand = { workspace = true, features = ["std"] }
