[package]
name = "adapters-lyrics"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Traits & Domain
application = { path = "../application" }

# Error Handling & Async
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
governor = { workspace = true, features = ["std", "quanta"] }
nonzero_ext.workspace = true
tracing = { workspace = true }

# Web / API
reqwest = { workspace = true, features = ["json", "rustls", "http2", "brotli", "gzip", "hickory-dns", "zstd"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
