[package]
name = "adapters-media-store"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
tokio.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
tracing.workspace = true
blake3 = "1"
walkdir = "2"
symphonia.workspace = true
