[package]
name = "adapters-media-store"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
shared-config = { path = "../shared-config" }
adapters-watcher = { path = "../adapters-watcher" }

tokio = { workspace = true, features = ["rt", "time", "sync", "fs"] }
tracing = { workspace = true, features = ["default"] }
thiserror = { workspace = true, features = ["default"] }
async-trait.workspace = true
uuid = { workspace = true, features = ["v4", "serde", "fast-rng"] }
chrono = { workspace = true, features = ["default", "serde"] }
bytes.workspace = true
symphonia = { workspace = true, features = ["mp3", "aac", "isomp4", "alac", "ogg", "vorbis", "wav", "flac"] }
lofty.workspace = true
unicode-normalization.workspace = true
walkdir.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
chromaprint-next.workspace = true

[dev-dependencies]
lofty.workspace = true
