[package]
name = "adapters-musicbrainz"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { path = "../application" }
governor = { workspace = true }
nonzero_ext.workspace = true
reqwest = { workspace = true, features = ["json", "rustls"] }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
