[package]
name = "adapters-musicbrainz"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
application = { path = "../application" }
governor = { workspace = true, features = ["std", "quanta"] }
nonzero_ext.workspace = true
reqwest = { workspace = true, features = ["json", "rustls", "http2", "brotli", "gzip", "hickory-dns", "zstd"] }
chrono = { workspace = true, features = ["default", "serde"] }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true, features = ["default"] }
tokio = { workspace = true }
tracing = { workspace = true, features = ["default"] }
thiserror = { workspace = true, features = ["default"] }
async-trait = { workspace = true }
