[package]
name = "adapters-persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }

sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
tokio = { workspace = true, features = ["rt", "time", "sync", "macros"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde", "fast-rng"] }
chrono = { workspace = true, features = ["serde"] }
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
