[package]
name = "adapters-persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }

sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
pgvector = { workspace = true, features = ["sqlx"] }
tokio = { workspace = true, features = ["rt", "time", "sync", "macros"] }
serde = { workspace = true, features = ["default", "derive"] }
uuid = { workspace = true, features = ["v4", "serde", "fast-rng"] }
chrono = { workspace = true, features = ["default", "serde"] }
thiserror = { workspace = true, features = ["default"] }
async-trait.workspace = true
tracing = { workspace = true, features = ["default"] }
