[package]
name = "adapters-voice"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
application = { path = "../application" }
adapters-persistence = { path = "../adapters-persistence" }
domain = { path = "../domain" }

songbird = { workspace = true, features = [
    "driver",
    "serenity",
    "rustls",
    "builtin-queue",
    "tungstenite",
    "gateway",
] }
serenity = { workspace = true, features = [
    "cache",
    "gateway",
    "rustls_backend",
    "model",
    "voice",
    "builder",
] }
tokio = { workspace = true, features = ["sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true, features = ["default"] }
uuid = { workspace = true, features = ["v4", "serde", "fast-rng"] }
dashmap = { workspace = true, features = ["inline", "serde"] }
async-trait = { workspace = true }
thiserror = { workspace = true, features = ["default"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
symphonia-core = { workspace = true }
