[package]
name = "adapters-watcher"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
shared-config = { path = "../shared-config" }
tokio = { workspace = true }
notify = { workspace = true, features = ["macos_fsevent"] }
notify-debouncer-full.workspace = true
tracing.workspace = true
thiserror.workspace = true
application = { version = "0.1.0", path = "../application" }
