[package]
name = "application"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "fs", "rt"] }
uuid = { workspace = true, features = ["v4", "serde", "fast-rng"] }
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
chrono = { workspace = true, features = ["serde", "clock"] }
bytes.workspace = true
tracing.workspace = true

