[package]
name = "domain"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
uuid = { workspace = true, features = ["v4", "serde", "fast-rng"] }
chrono = { workspace = true, features = ["default", "serde"] }
serde = { workspace = true, features = ["default", "derive"] }
sqlx = { workspace = true, features = ["derive", "postgres"] }
thiserror = { workspace = true, features = ["default"] }
